# valkey-ci-agent

./: .env.example  README.md  pyproject.toml  repos.yml
.github/workflows/: backport-mark-done-poll.yml  backport-poll.yml  backport-sweep.yml  backport.yml  ci-fix-comment-poll.yml  ci-fix-verify-macos.yml  ci-fix.yml  manual-backport.yml  manual-revert-commit.yml  monitor-fuzzer.yml  test-failure-detector-sweep.yml
docs/: architecture.md
examples/: repos.yml
scripts/ai/: claude_code.py  runtime.py
scripts/backport/: cherry_pick.py  conflict_resolver.py  diff_comments.py  main.py  mark_done.py  matrix.py  models.py  poller.py  pr_creator.py  registry.py  revert_commit.py  risk.py  (+7 more)
tests/: conftest.py  test_agent_runtime.py  test_artifact_fetcher.py  test_backport_cherry_pick.py  test_backport_main.py  test_backport_mark_done.py  test_backport_poller.py  test_backport_pr_creator.py  test_backport_sweep.py  test_backport_utils.py  test_ci_fix_apply.py  test_ci_fix_comment.py  test_ci_fix_comment_poll.py  test_ci_fix_diagnose.py  test_ci_fix_gate.py  test_ci_fix_github_runs.py  test_ci_fix_main.py  test_ci_fix_pipeline.py  test_ci_fix_port_discovery.py  test_ci_fix_push.py  test_ci_fix_review.py  test_ci_fix_runner.py  test_ci_fix_verify_macos.py  test_ci_fix_workflow_env.py  test_claude_code.py  test_claude_conflict_resolver.py  test_diff_comments.py  test_failure_parser.py  test_fuzzer_analyzer.py  test_fuzzer_artifacts.py  test_fuzzer_issue_publisher.py  test_fuzzer_issue_renderer.py  test_fuzzer_main.py  test_git_clone.py  test_github_client.py  test_incidents.py  test_issue_dedup.py  test_issue_manager.py  test_matrix.py  test_proc_git.py  (+9 more)
(+40 files in other folders)
